# oa-chat

./: .eslintignore  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  ICON_SETUP.md  LICENSE  MEMORY_SYSTEM_GUIDE.md  README.md  THIRD_PARTY_LICENSES  api.js  app.js  db.js  index.html  package-lock.json  package.json  styles.css  tailwind.config.js  vercel.json
chat/: api.js  (+9 more)
memory/: MEMORY_FEATURE.md  config.py  exp_with_memory.py  pyproject.toml  request_key.py  start_server.sh
memory/oa_agent/: __init__.py  llm_agent.py  llm_client.py  logging_utils.py  memory.py  retriever.py
memory/scripts/: preprocess_events.py  server.py
server/: README.md  api_keys_sample.csv  generate_test_jwt.py  providers.yaml  pyproject.toml  pytest.ini  requirements.txt  run_services.py
server/backend/: __init__.py  main.py
server/backend/direct_api/: router.py
server/backend/direct_api/v1/: __init__.py  direct_api.py
server/backend/shared/api/: __init__.py  health.py  providers.py
server/backend/shared/clients/: __init__.py  key_client.py  redis.py
server/backend/web_api/: router.py
server/docker/: Dockerfile.key-server  Dockerfile.web-server  README.md  docker-compose.dev.yml  docker-compose.prod.yml  env.example  redis.conf
server/key_server/: README.md  __init__.py  __main__.py  keyserver.proto  keyserver_pb2.py  keyserver_pb2_grpc.py  server.py
server/key_server/internal/: __init__.py  initializer.py  key_manager.py  redis_client.py  vault_client.py
server/tests/: test_decoy_privacy_protection.py  test_full_integration.py  test_temporal_privacy_protection.py
(+243 files in other folders)
