[project]
name = "memory"
version = "0.1.0"
description = "Memory processing server for oa-fastchat chat history"
readme = "MEMORY_FEATURE.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi>=0.128.0",
    "fire>=0.7.1",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "modal>=1.3.1",
    "numpy==1.26.4",
    "pydantic>=2.12.5",
    "python-dotenv==1.1.1",
    "requests>=2.32.5",
    "torch==2.2.0",
    "tqdm>=4.67.1",
    "transformers==4.57.3",
    "uvicorn>=0.40.0",
]
