[project]
name = "server"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.20.0",
    "google-genai>=1.13.0",
    "loguru>=0.7.0",
    "openai>=1.19.1",
    "pydantic>=2.6.4",
    "pytest>=7.4.3",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.0",
    "requests>=2.32.2",
    "together>=0.2.11",
]
